# anthropic-hass-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  hacs.json  info.md  requirements_test_all.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
custom_components/: conversation.py
custom_components/anthropic/: __init__.py  config_flow.py  const.py  conversation.py  conversation_agent.py  manifest.json  strings.json
custom_components/anthropic/conversation/: __init__.py
custom_components/anthropic/translations/: en.json  ru.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_conversation.py  test_init.py
