[metadata]
license_file = LICENSE

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
max-line-length = 88

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = black
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = custom_components.anthropic,tests
combine_as_imports = true

[tool:pytest]
testpaths = tests
norecursedirs = .git
asyncio_mode = auto